--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "16.3.1",
-    "react-native": "0.55.4",
+    "react-native": "git+ssh://git@github.com:carly-lee/react-native.git#0.55-stable", // https://github.com/facebook/react-native/pull/19087
     "react-native-navigation": "^2.0.2354",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
