--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start --reset-cache",
     "reset": "rm -rf node_modules/ && yarn cache clean && watchman watch-del-all && rm -rf $TMPDIR/react-* && yarn install",
+    "run-ios": "react-native run-ios --simulator=\"iPhone 8\"",
     "test": "jest"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "git+ssh://git@github.com:carly-lee/react-native.git#0.55-stable",
-    "react-native-navigation": "^2.0.2354",
+    "react-native-navigation": "2.0.2354",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
