--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "git+ssh://git@github.com:carly-lee/react-native.git#0.55-stable",
