--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "git+ssh://git@github.com:carly-lee/react-native.git#0.55-stable",
     "react-native-navigation": "2.0.2354",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "hoist-non-react-statics": "^2.5.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
